<resources>
    <string name="app_name">FallingWords</string>
    <string name="start_game">Start Game</string>
    <string name="text_wrong">Wrong</string>
    <string name="text_correct">Correct</string>
    <string name="text_words">Words %1$s</string>
    <string name="txt_score">Score %1$s</string>
    <string name="text_game_over">Game Over</string>
    <string name="text_restart">Restart</string>
    <string name="game_name">Falling words</string>
</resources>